[BGPT] Create scroll nodes for ScrollTimeline scroll-sources

AnimationWorklet currently relies on property trees having a ScrollNode
for composited scrollers even when they don't actually scroll overflow,
so that it can have a cc::ScrollTimeline based off of them. This CL
alters the BlinkGenPropertyTrees scroll-node creation logic to create
such a node.

Bug: 855718
Cq-Include-Trybots: luci.chromium.try:linux-blink-gen-property-trees;luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I135cc1ace6511315a863638b5ee824ccac88ecb3
Reviewed-on: https://chromium-review.googlesource.com/1114121
Commit-Queue: Peter Mayo <petermayo@chromium.org>
Reviewed-by: Philip Rogers <pdr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#572865}