third_party/blink/renderer/core/animation/scroll_timeline.cc
@@ -170,6 +170,8 @@ void ScrollTimeline::AttachAnimation() {
   LayoutBoxModelObject* object = scroll_source_->GetLayoutBoxModelObject();
   if (object && object->HasLayer())
     object->Layer()->SetNeedsCompositingInputsUpdate();
+  if (object)
+    object->SetNeedsPaintPropertyUpdate();
 }
 
 void ScrollTimeline::DetachAnimation() {
@@ -185,6 +187,8 @@ void ScrollTimeline::DetachAnimation() {
     LayoutBoxModelObject* object = scroll_source_->GetLayoutBoxModelObject();
     if (object && object->HasLayer())
       object->Layer()->SetNeedsCompositingInputsUpdate();
+    if (object)
+      object->SetNeedsPaintPropertyUpdate();
   }
 }
 
